--- a/mindreading/conf espp 2012 symposium false belief counterfactuals perspective schurz rafetseder/false beliefs, perspectives and counterfactuals espp 2012 symposium submission.tex
+++ b/mindreading/conf espp 2012 symposium false belief counterfactuals perspective schurz rafetseder/false beliefs, perspectives and counterfactuals espp 2012 symposium submission.tex
@@ -99,7 +99,7 @@ Can we reject (\ref{fb_is_perspectives})?
 Since Matthias' and Eva's talks are (in part) arguments for this claim, let me come back to it after first considering whether we can reject 
 claim (\ref{infant_perspectives}).
 
-Can we reject (\ref{infant_perspectives}), the claim that infants neither process perspective differences nor engage in counterfactual reasoning until they are at least one year old?
+Can we reject (\ref{infant_perspectives}), the claim that infants neither process perspective differences nor engage in counterfactual reasoning until they well over one year old?
 One difficulty is that current developmental evidence almost uniformly supports this claim  \citep{rafetseder:2010_counterfactual,beck:2011_almost}.
 A second problem is that the development of abilities to reason counterfactually,%
 \footnote{Here and throughout I follow Eva Rafetseder in using the term `counterfactual reasoning'  to refer to reasoning which essentially involves comparing two possible situations; the term is sometimes used more broadly to include the sorts of representations involved in pretence.} 
@@ -167,7 +167,7 @@ It is not just that some are verbal whereas others are nonverbal.
 It is also that some involve prediction whereas others involve retrodiction or justification \citep[e.g.][]{Wimmer:1998kx},
 some concern the first-person perspective, whereas others involve a second- or third-person perspective \citep[e.g.][]{Gopnik:1991db},
 some involve interaction whereas in others the subject is a mere observer \citep[e.g.][]{Chandler:1989qa},
-and some involve prediction actions whereas others involve predicting desires \citep{Astington:1991kk} or selecting an argument appropriate for someone with a false belief \citep{Bartsch:2000es}.
+and some involve predicting actions whereas others involve predicting desires \citep{Astington:1991kk} or selecting an argument appropriate for someone with a false belief \citep{Bartsch:2000es}.
 Despite all this variation and more, the Category A tasks all appear to measure a single developmental transition \citep{Wellman:2001lz}.
 This is a significant obstacle to identifying the Extraneous Requirement.
 In fact, in my view the currently available evidence supports the conclusion that there is no Extraneous Requirement.
@@ -195,7 +195,7 @@ Given such a distinction we could remove the contradiction by making the followi
 
 \item[2$'$.] Being able to represent false beliefs \emph{explicitly}  involves being able to  (i) process perspective differences or (ii) reason counterfactually (or both). \label{fb_is_perspectives_prime}
 
-\item[3$'$.] Infants cannot (i) process perspective differences nor (ii) engage in counterfactual reasoning until they are at least one year old.  \label{infant_perspectives}
+\item[3$'$.] Infants cannot (i) process perspective differences nor (ii) engage in counterfactual reasoning until they are well over one year old.  \label{infant_perspectives}
 \end{description}
 \end{quote}
 %
@@ -267,7 +267,7 @@ The idea would be this:
 %
 \item[2$''$.] Being able to represent false beliefs \emph{using a comparatively sophisticated measure}  involves being able to  (i) process perspective differences or (ii) reason counterfactually (or both). 
 %
-\item[3$''$.] Infants cannot (i) process perspective differences nor (ii) engage in counterfactual reasoning until they are at least one year old.  
+\item[3$''$.] Infants cannot (i) process perspective differences nor (ii) engage in counterfactual reasoning until they are well over one year old.  
 \end{description}
 \end{quote}
 %
@@ -324,7 +324,7 @@ So here is a final refinement of the claims which make up the puzzle that I star
 %
 \item[2$'''$.] Being able to represent false beliefs \emph{using a comparatively sophisticated measure} and  \emph{in a non-modular process}  involves being able to  (i) process perspective differences or (ii) reason counterfactually (or both). 
 %
-\item[3$'''$.] Infants cannot (i) process perspective differences nor (ii) engage in counterfactual reasoning until they are at least one year old.  
+\item[3$'''$.] Infants cannot (i) process perspective differences nor (ii) engage in counterfactual reasoning until they are well over one year old.  
 \end{description}
 \end{quote}
 %
