bits and pieces

--- a/intention motor representation joint action (paper 3)/intention and motor representation in joint action.tex
+++ b/intention motor representation joint action (paper 3)/intention and motor representation in joint action.tex
@@ -43,7 +43,7 @@ and we argue that social motor representation and shared intention  have distinc
 Which events are joint actions?
 We shall argue that fully answering this question involves appeal to structures of motor representation.
 By contrast, 
-most philosophers and many (but not all) psychologists appear to assume that this question can be fully answered just in terms of a special kind of intention or structure of intention, knowledge and committment often called a shared (or `collective') intention.
+most philosophers and many (but not all) psychologists appear to assume that this question can be fully answered just in terms of a special kind of intention or structure of intention, knowledge and commitment often called a shared (or `collective') intention.
 On this widely held view, for an event to be a joint action is for it to be appropriately related to a shared intention.
 This view is analogous to the view that, in the case of ordinary, individual action, 
  for an event to be an action is for it to be appropriately related to an intention.
@@ -388,6 +388,88 @@ If, as we have just argued, social motor representations play a role analogous t
 
 
 \section{The Contrast Cases}
+We have been arguing that social motor representation can bind multiple agents' activities together and link them to an outcome, and this in much the way that shared intention does  so.
+This is a reason, 
+not decisive but perhaps sufficient in the absence of strong contrary reasons, 
+for supposing that social motor representation plays a role in explaining which events are joint actions.
+Perhaps some events are joint actions in virtue of being appropriately related not to shared intention but to social motor representation.
+
+As mentioned at the start, our aim is to extend and generalise existing theories, not to replace them. 
+But at this point our answer to the question of which events are joint actions seems to involve a disjunction.
+This is both puzzling and inelegant. 
+(Unless, of course, social motor representation can be regarded as a special case of shared intention.  
+We explain why we reject this possibility below.)
+In this section we explain how an account of joint action in terms of shared intention can be generalised to accommodate the possibility that social motor representation plays a role in explaining which events are joint actions.
+
+What guides and constrains theorising about shared intention? 
+While there is little agreement on what shared intention is or what it is for, intuitions about it are sometimes grounded in contrast cases.
+Contrast cases are pairs of events which are similar in terms of the behaviour and coordination they involve but where one is a joint action while the other is not.  
+Thus \citet{gilbert_walking_1990} contrasts two people walking together with two people individually walking side by side.  
+The two pairs' movements may be the same and similarly coordinated (to avoid collision), but walking together is a joint action whereas merely walking side by side is not. 
+Relatedly,  \citet{Searle:1990em}  contrasts a case in which several park visitors simultaneously run to a central shelter in order to perform a dance with another case in which the park visitors run to the central shelter in order to escape a storm.  The first is a case of joint action, the second is not; but the same movements occur in both.  
+These sorts of contrast case invite the question, 
+How do joint actions differ from individual but parallel actions? 
+Gilbert’s example shows that the difference can’t just be a matter of coordination, because people who are merely walking alongside each other also need to coordinate their actions in order to avoid colliding.  
+And Searle’s example shows that the difference between joint action and parallel individual action can’t just be that the actions have a common effect because merely parallel actions can have common effects too. 
+
+How might the contrast cases be used to guide and constrain theorising about shared intention?
+The idea that they serve this function seems to rest on a premise:
+It is possible to distinguish systematically between the contrast cases by appeal to shared intention and only by appeal to shared intention.
+We shall show that there is another, more general way to distinguish contrast cases.
+
+Take Searle's example of several people running to the shelter.  
+In the joint case, there is a single outcome to which each person's actions is individually directed, namely their collective arrival at the shelter.  
+In the contrasting individual case, where park visitors individually run to the shelter to escape a storm, there is no single outcome to which each of their actions is individually directed.  
+Instead each visitor's actions are directed to that visitor's own arrival at the shelter.  
+Similarly, turning to Gilbert's example, when two people walk together, there is a single outcome to which both of their actions are individually directed (their collective arrival at a corner, say); whereas when two people merely walk side by side there is no single outcome to which each agent's actions are directed.  
+In general, where two or more agent's actions constitute a joint action, there is an outcome to which each agent's actions are individually directed such that it is possible for them all to succeed relative to this outcome.%
+\footnote{
+Some readers may be sceptical of this claim.
+But note that it is a consequence of the view we are opposing, the view that all joint actions involve shared intention.
+Or, rather, it is a consequence of this view given a further premise which is a consequence of any standard account of shared intention: Where several agents act on a shared intention that they J, 
+each will perform an action directed to J and it is possible for them all to succeed in J-ing.
+} 
+Since this is not true in the contrasting cases of non-joint action, it allows us to distinguish systematically between joint actions and their non-joint but behaviourally and coordinatively indistinguishable counterparts.  
+
+For concision let us stipulate that an outcome is a \emph{distributive goal} of two or more agents' actions just if two conditions are met.
+First, this outcome is a goal to which each agent's actions are individually directed.
+Second, each agent's actions are related to the goal in such a way that it is possible for all the agents (not just any agent, all of them together) to succeed relative to this goal.
+In these terms, our claim is that joint actions involve distributive goals and that this distinguishes joint actions from non-joint actions in the standard contrast cases.  
+Since social motor representation and shared intention are each sufficient for the existence of a distributive goal, we can conclude that systematically distinguishing between standardly considered contrast cases does not require shared intention.
+ 
+A natural response to this argument would be to suggest that the standard contrast cases are insufficient. 
+For in some cases two agents' actions can have a distributive goal although arguably there is no joint action. 
+Nora and Olive killed Fred.  
+Each fired a shot.
+Each intended that her shooting ground or partially ground Fred's death.%
+\footnote{
+Events $D_1$, ...\ $D_n$ \emph{ground} $E$, if: $D_1$, ...\ $D_n$ and $E$ occur; 
+$D_1$, ...\ $D_n$ are each part of $E$; and 
+every event that is 
+	a part of $E$
+	but does not overlap $D_1$, ...\ $D_n$ 
+is caused by some or all of $D_1$, ...\ $D_n$.
+(This is a refinement and generalisation of a notion due to \citet{pietroski_actions_1998}.)
+Event $D$ \emph{partially grounds} event $E$ if $D$ alone does not ground $E$ but there are events including $D$ which do ground $E$.
+} 
+%
+As it turned out, both intentions were fulfilled.
+Neither shot was individually fatal but together they were deadly.
+An ambulance arrived on the scene almost at once but Fred didn't make it to the hospital.
+Now Nora and Olive's actions have a distributive goal.
+After all, 
+	each agent's actions are individually directed to Fred's death
+	and  
+	it is consistent with the stipulations made about this scenario that these goal relations are compatible in the sense that both agents could succeed together. 
+But is their killing of Fred a joint action?
+Imagine that Nora and Olive had no knowledge of each other, nor of each other's actions, and that their efforts were entirely uncoordinated.
+We might even suppose that Nora and Olive are so antagonistic to each other that they would, if either knew the other's location, turn their guns on each other.
+Their actions nevertheless have a distributive goal.
+But given these further suppositions it is likely to seem counterintuitive to suppose that their killing Fred was a joint action. 
+So although we can distinguish the standardly considered contrast cases just by appeal to the notion of a distributive goal, we should not assume that this notion captures the intended contrast between joint and merely parallel actions.
+
+***HERE refine: collective goals
+
 
 
 \section{Social motor representation: unlike shared intention}
@@ -434,42 +516,7 @@ We must therefore defend the view that joint action need not involve shared inte
 
 As far as we know, the claim that all joint action involves shared intention is not explicitly argued for.  
 The best argument we know of hinges on so-called contrast cases.
-Contrast cases are pairs of actions which are similar in terms of behaviour and coordination but where one is joint but the other isn't.  
-\citet{gilbert_walking_1990} contrasts two people walking together with two people individually walking side by side.  
-The two pairs' movements may be the same and similarly coordinated (to avoid collision), but walking together is a joint action whereas merely walking side by side is not. 
-Relatedly,  \citet{Searle:1990em}  contrasts a case in which several park visitors simultaneously run to a central shelter in order to perform a dance with another case in which the park visitors run to the central shelter in order to escape a storm.  The first is a case of joint action, the second is not; but the same movements occur in both.  
-These sorts of contrast case invite the question, 
-How do joint actions differ from individual but parallel actions? 
-Gilbert’s example shows that the difference can’t just be a matter of coordination, because people who are merely walking alongside each other also need to coordinate their actions in order to avoid colliding.  
-And Searle’s example shows that the difference between joint action and parallel individual action can’t just be that the actions have a common effect because merely parallel actions can have common effects too. 
-
-How could the contrast cases be used to argue that all joint action involves shared intention?
-The argument rests on this premise:
-It is possible to distinguish systematically between the contrast cases by appeal to shared intention and only by appeal to shared intention.
-To defeat this argument we shall show that there is another, more general way to distinguish contrast cases.
-
-Take Searle's example of several people running to the shelter.  
-In the joint case, there is a single outcome to which each person's actions is individually directed, namely their collective arrival at the shelter.  
-In the contrasting individual case, where park visitors individually run to the shelter to escape a storm, there is no single outcome to which each of their actions is individually directed.  
-Instead each visitor's actions are directed to that visitor's own arrival at the shelter.  
-Similarly, turning to Gilbert's example, when two people walk together, there is a single outcome to which both of their actions are individually directed (their collective arrival at a corner, say); whereas when two people merely walk side by side there is no single outcome to which each agent's actions are directed.  
-In general, where two or more agent's actions constitute a joint action, there is an outcome to which each agent's actions are individually directed such that it is possible for them all to succeed relative to this outcome.%
-\footnote{
-Some readers may be sceptical of this claim.
-But note that it is a consequence of the view we are opposing, the view that all joint actions involve shared intention.
-Or, rather, it is a consequence of this view given a further premise which is a consequence of any standard account of shared intention: Where several agents act on a shared intention that they J, 
-each will perform an action directed to J and it is possible for them all to succeed in J-ing.
-} 
-Since this is not true in the contrasting cases of non-joint action, it allows us to distinguish systematically between joint actions and their non-joint but behaviourally and coordinatively indistinguishable counterparts.  
-
-For concision let us stipulate that an outcome is a \emph{distributive goal} of two or more agents' actions just if two conditions are met.
-First, this outcome is a goal to which each agent's actions are individually directed.
-Second, each agent's actions are related to the goal in such a way that it is possible for all the agents (not just any agent, all of them together) to succeed relative to this goal.
-Let us also say that a structure is \emph{something like shared intention} if it stands to joint action roughly as intention stands to ordinary, individual action.  
-In these terms, our claim is that joint actions involve distributive goals and that this distinguishes joint actions from non-joint actions in the standard contrast cases.  
-Given that the existence of a distributive goal need involve nothing like a shared intention, we can conclude that systematically distinguishing between the contrast cases does not require anything like shared intention.
- 
-
+***[moved]
 
 
 I think this argument is mistaken for two reasons.
