before change question

--- a/intention motor representation joint action (paper 3)/conf collective intentionality manchester 2012/motor representation and shared intention.tex
+++ b/intention motor representation joint action (paper 3)/conf collective intentionality manchester 2012/motor representation and shared intention.tex
@@ -6,15 +6,10 @@
 \documentclass[12pt,\papersize]{extarticle}
 % extarticle is like article but can handle 8pt, 9pt, 10pt, 11pt, 12pt, 14pt, 17pt, and 20pt text
 
-\def \ititle {Motor Representation and Shared Intention}
+\def \ititle {Motor Representation \\ and Shared Intention}
 \def \isubtitle {}
 \def \iauthor {
-%S. Butterfill* \& C. Sinigaglia**
-%\\ 
-%**Department of Philosophy, University of Warwick
-%\\ 
-%***Dipartimento di Filosofia, Università degli Studi di Milano
-}
+\textit{Collective Intentionality}, Manchester, August 2012}
 \def \iemail{s.butterfill@warwick.ac.uk}
 %\date{}
 
@@ -94,21 +89,29 @@ Gilbert’s example shows that the difference can’t just be a matter of coordi
 And Searle’s example shows that the difference between joint action and parallel individual action can’t just be that the actions have a common effect because merely parallel actions can have common effects too. 
 If someone thought that it is possible to distinguish systematically between the contrast cases by appeal to shared intention (and perhaps only by appeal to shared intention), this could motivate holding that for an event to be a joint action is for it to be appropriately related to a shared intention.
 
-{\label{text:second_consideration} A second consideration} in favour of this view is a possible parallel between shared intention and ordinary, individual action.
+{\label{text:second_consideration} A second consideration} in favour of this view is a possible parallel between joint action and ordinary, individual action.
 If you think that events are actions in virtue of being appropriately related to intentions, 
 and if you think that shared intention stands to joint action as plain vanilla intention stands to ordinary, individual action,
-then it seems reasonable to suppose that for an event to be a joint action is for it to be appropriately related to a shared intention (*cite Pacherie Synthese forthcoming).
+then it seems reasonable to suppose that for an event to be a joint action is for it to be appropriately related to a shared intention (as \citealp{Pacherie:2012fk} suggests).
+
 
 
 \subsection{My view}
-But the parallel assumption about ordinary, individual action is not universally accepted. 
-In fact, some allow that there could be agents whose actions are purposive---and, in some cases, even intentional---although  the agents have no intentions at all.
-For instance, Michael Bratman describes a creature who `acts on the basis of its beliefs and considered desires' only (not intentions) as doing things `intentionally'.%
-\footnote{
-For instance, \citet[p.\ 251]{bratman:2000_valuing} % = \citep[p.\ 51]{Bratman:2007bd}
-describes an agent called `Creature 2' who `acts on the basis of its beliefs and considered desires' only (not intentions) as doing things `intentionally'.
-}
-Others have argued that motor representation and intention are both needed in explaining which events are ordinary, individual actions \citep{pacherie:2000_content,butterfill:2012_intention}.
+On the second consideration, 
+we take for granted that there is a parallel between joint action and ordinary, individual action.
+But is the standard view about the relation between action and intention correct? 
+
+Not everyone accepts the standard view.
+Some philosophers allow that there could be agents whose actions are purposive---and, in some cases, even intentional---although  the agents have no intentions at all.
+For instance, Michael Bratman describes a creature who `acts on the basis of its beliefs and considered desires' only (not intentions) as doing things `intentionally' \citet[p.\ 251]{bratman:2000_valuing}.%
+%\footnote{
+%For instance, \citet[p.\ 251]{bratman:2000_valuing} % = \citep[p.\ 51]{Bratman:2007bd}
+%describes an agent called `Creature 2' who `acts on the basis of its beliefs and considered desires' only (not intentions) as doing things `intentionally'.
+%}
+
+Others reject the standard view without asserting there can be action without intention.
+Instead they claim that ingredients other than intention are needed to say which events are actions.
+In particular, some claim that motor representation and intention are both needed in explaining which events are ordinary, individual actions \citep{pacherie:2000_content,butterfill:2012_intention}.
 If any such view is correct, it is impossible to fully explain what it is for an event to be an action by appeal to intention alone.
 
 Our aim in this talk is to defend a parallel view about joint action. 
@@ -120,6 +123,59 @@ Please bear in mind that we are not trying to get rid of, or replace, the notion
 %I take for granted that a notion of shared intention is needed for explaining which events are joint actions. 
 %My concern is only with the possibility that additional ingredients are needed as well.
 In fact recognising that motor representation is needed to say which events are joint actions may make it easier to understand what shared intention is.
+
+
+\section{Intention and Motor Representation}
+So that you can see where this is going, let me briefly explain what stands behind the view that motor representation is needed in addition to intention in saying which events are actions.
+
+A basic question about ordinary, individual action is:
+What is the relation between a purposive action and the outcome or outcomes to which it is directed?
+Purposive actions typically have many actual outcomes.
+Grabbing little Isabel by the hands I swing her around, causing her to laugh and, simultaneously, breaking a vase.
+Either or both of these might be outcomes to which my action is directed.
+Note also that some or all of the outcomes to which my action was directed might not be among its actual outcomes; after all, actions can fail.
+So among all the actual and possible outcomes of my action, one or some are singled out as specially related to this action.
+The question is what singles out the outcome or outcomes, actual or merely possible, to which a particular purposive is directed.
+
+This question is closely related to a second.
+Ordinary purposive actions are sometimes composed of more than one motor action.  My swinging Isabel around includes my reaching for her wrists, grasping them and then spinning us around.  
+But  my action doesn’t include other things which I might be doing simultaneously, like refusing a cup of tea with my eyes or  trying to determine whether that smell is coming from Isabel’s sister Hannah’s nappy.
+The second question, then, is this: For a particular action directed to a specified goal, what determines which activities%
+\footnote{
+As we use the term `activities',
+all actions are activities 
+and so are  things like reaching and grasping.
+This should make it clear that our position does not depend on whether or not reachings and the like are  actions.
+} 
+comprise the purposive action and which do not?
+
+The standard answer to both questions involves intention.
+An intention represents an outcome, coordinates the one or several activities which comprise the action, and coordinates these activities in a way that would normally facilitate the outcome's occurrence.
+What binds component activities together into larger purposive actions?  
+It is the fact that these actions are all consequences of plans involving a single intention (and are all appropriately related to those plans).
+What singles out an actual or possible outcome as one to which the component activities are collectively directed?  
+It is the fact that this outcome is represented by the intention.
+So the intention is what binds component actions together into purposive actions and links the action taken as a whole to the outcomes to which they are directed.
+
+Motor representations are relevantly similar to intentions,
+as some have recently argued (\citealp[pp.\ 189-90]{pacherie:2008_action}; \citealp{butterfill:2012_intention}).
+Of course motor representations differ from intentions in some important ways (as these authors note).
+But they are similar in the respects that matter for explaining the purposiveness of action.
+For, like intentions, some motor representations represent outcomes and not merely kinematic features of action.
+Like intentions, some motor representations play a role in coordinating multiple  component activities by virtue of their role as elements in hierarchically structured plans.
+And, like intentions, some motor representations coordinate these activities in a way that would normally facilitate the outcome’s occurrence.
+So anyone who accepts the standard story about purposive action and intention
+should also accept that a similar story about purposive action and motor representation.
+Given that the two basic questions about ordinary, individual purposive action can also be answered by appeal to intention,
+they can also be answering by appeal to motor representation.
+This motivates the following view.
+Not all purposive actions are bound together and linked to outcomes by intentions. 
+In some cases what binds together purposive actions and links them to outcomes are motor representations.
+%In some cases, the purposiveness of an action is grounded in a motor representation of an outcome; in other cases it is grounded in an intention.
+And of course in many cases it may be that both intention and motor representation are involved.
+
+This is one reason for supposing that motor representation is not merely an enabling condition for ordinary, individual action but also plays a role in explaining what action is (just as intention does).
+Now let’s return to joint action.
 
 
 
@@ -236,54 +292,7 @@ social motor representation enables joint action
 To see why,
 let’s go back to individual action for a moment again.
 
-A basic question about ordinary, individual action is:
-What is the relation between a purposive action and the outcome or outcomes to which it is directed?
-Purposive actions typically have many actual outcomes.
-Grabbing little Isabel by the hands I swing her around, causing her to laugh and, simultaneously, breaking a vase.
-Either or both of these might be outcomes to which my action is directed.
-Note also that some or all of the outcomes to which my action was directed might not be among its actual outcomes; after all, actions can fail.
-So among all the actual and possible outcomes of my action, one or some are singled out as specially related to this action.
-The question is what singles out the outcome or outcomes, actual or merely possible, to which a particular purposive is directed.
-
-This question is closely related to a second.
-Ordinary purposive actions are sometimes composed of more than one motor action.  My swinging Isabel around includes my reaching for her wrists, grasping them and then spinning us around.  
-But  my action doesn’t include other things which I might be doing simultaneously, like refusing a cup of tea with my eyes or  trying to determine whether that smell is coming from Isabel’s sister Hannah’s nappy.
-The second question, then, is this: For a particular action directed to a specified goal, what determines which activities%
-\footnote{
-As we use the term `activities',
-all actions are activities 
-and so are  things like reaching and grasping.
-This should make it clear that our position does not depend on whether or not reachings and the like are  actions.
-} 
-comprise the purposive action and which do not?
-
-The standard answer to both questions involves intention.
-An intention represents an outcome, coordinates the one or several activities which comprise the action, and coordinates these activities in a way that would normally facilitate the outcome's occurrence.
-What binds component activities together into larger purposive actions?  
-It is the fact that these actions are all consequences of plans involving a single intention (and are all appropriately related to those plans).
-What singles out an actual or possible outcome as one to which the component activities are collectively directed?  
-It is the fact that this outcome is represented by the intention.
-So the intention is what binds component actions together into purposive actions and links the action taken as a whole to the outcomes to which they are directed.
-
-Motor representations are relevantly similar to intentions,
-as some have recently argued (\citealp[pp.\ 189-90]{pacherie:2008_action}; \citealp{butterfill:2012_intention}).
-Of course motor representations differ from intentions in some important ways (as these authors note).
-But they are similar in the respects that matter for explaining the purposiveness of action.
-For, like intentions, some motor representations represent outcomes and not merely kinematic features of action.
-Like intentions, some motor representations play a role in coordinating multiple  component activities by virtue of their role as elements in hierarchically structured plans.
-And, like intentions, some motor representations coordinate these activities in a way that would normally facilitate the outcome’s occurrence.
-So anyone who accepts the standard story about purposive action and intention
-should also accept that a similar story about purposive action and motor representation.
-Given that the two basic questions about ordinary, individual purposive action can also be answered by appeal to intention,
-they can also be answering by appeal to motor representation.
-This motivates the following view.
-Not all purposive actions are bound together and linked to outcomes by intentions. 
-In some cases what binds together purposive actions and links them to outcomes are motor representations.
-%In some cases, the purposiveness of an action is grounded in a motor representation of an outcome; in other cases it is grounded in an intention.
-And of course in many cases it may be that both intention and motor representation are involved.
-
-This is one reason for supposing that motor representation is not merely an enabling condition for ordinary, individual action but also plays a role in explaining what action is (just as intention does).
-Now let’s return to joint action.
+[***moved to earlier]
 
 The same two questions we asked about ordinary, individual action also arise for joint action.
 %What is the relation between a purposive joint action and the outcome or outcomes to which it is directed?
