final version? Monday's effort

--- a/intention motor representation joint action (paper 3)/conf collective intentionality manchester 2012/motor representation and shared intention.tex
+++ b/intention motor representation joint action (paper 3)/conf collective intentionality manchester 2012/motor representation and shared intention.tex
@@ -126,6 +126,8 @@ In fact recognising that motor representation is needed to say which events are 
 
 
 \section{Intention and Motor Representation}
+[\emph{*Probably skip all of this section in the talk}]
+
 So that you can see where this is going, let me briefly explain what stands behind the view that motor representation is needed in addition to intention in saying which events are actions.
 
 A basic question about ordinary, individual action is:
@@ -307,7 +309,7 @@ For the shared intention
 involves a representation, on the part of each agent, of an outcome,
 coordinates the several agents’ activities
 and 
-coordinates the several agents’ activities in such a that would normally facilitate the occurrence of the represented outcome.
+coordinates the several agents’ activities in such a way that would normally facilitate the occurrence of the represented outcome.
 This is how a shared intention can bind together the activities comprising a joint action and link them to an outcome.
 %Shared intention does for joint action roughly what ordinary intention does for ordinary, individual action.
 
