manchester tuesday morning

--- a/intention motor representation joint action (paper 3)/conf collective intentionality manchester 2012/motor representation and shared intention.tex
+++ b/intention motor representation joint action (paper 3)/conf collective intentionality manchester 2012/motor representation and shared intention.tex
@@ -524,7 +524,7 @@ The standard view is that for an event to be a joint action it must be appropria
 We are in the process of arguing that this is not the whole truth about joint action,
 and that some events are joint actions by virtue of being appropriately related to a structure of motor representations we call social motor representation.
 We don’t mean to suggest that all joint actions involve social motor representation.
-The view we are aiming to establish is rather this: Some joint actions involve social motor representation; and there could be joint actions which involve social motor representation but not shared intention.
+The view we are aiming to establish is rather this: Some events are joint actions in virtue of being appropriately related to social motor representations which bind their components together and ensure that there is a single outcome to which these components are collectively directed.
 This is why 
 %Recap: the question was: Does social motor representation  play a role in explaining what joint is?
 %I have just been arguing for a positive answer.
@@ -532,7 +532,30 @@ This is why
 %\textbf{Reciprocal agent-neutral motor representations coordinate multiple agents’ actions around an outcome in part by virtue of representing that outcome.}
 %That is, reciprocal social motor representations can ground the purposiveness of joint action.
 %This is why I think that 
-fully understanding what joint action is requires understanding the coordinating role of social motor representation and not only understanding shared intention.
+understanding which events are joint actions requires understanding not only shared intention but also
+ the coordinating role of social motor representation.
+
+This gives rise to a challenge. 
+Effective joint action—imagine two people erecting a tent in a gale together—sometimes requires both shared intentions and social motor representation plus a certain kind of harmony between the two. 
+To characterise the harmony required, let us define a notion of matching:
+%
+\begin{quote}
+Two  outcomes, A and B, \emph{match} in a particular context just if, in that context, either the occurrence of A would normally constitute or cause, at least partially, the occurrence of B or vice versa. 
+\end{quote}
+%
+When joint action involves both shared intention and social motor representation, the outcomes each of these representations specify should match.
+This is the required harmony.
+The challenge is to explain how matching could ever non-accidentally occur.
+%This will be particularly difficult if you suppose, as we do, that motor representation and intention are not inferentially integrated. 
+
+I think we can see a possible solution to this challenge by considering another problem.
+In building shared intention from ordinary individual intention, we need intentions \emph{that we J}.
+As has been much discussed, the contents of these intentions cannot all refer to actions involving shared intentions.
+For this reason Michael Bratman suggests that things we intend are  cooperatively neutral activities.
+It is then necessary to add further intentions in order to transform cooperatively neutral activities into joint actions.
+But it also seems possible that in some cases, what we intend when we intend that we J is not a cooperatively neutral activity but instead a joint action of the sort which involves social motor representation.
+
+So perhaps harmony between shared intention and social motor representation is sometimes achieved in this way: what we intend when we share an intention is the sort of joint action that involves social motor representation.
 
 
 
